# Nova-Prototype

.github/workflows/: nova-loop.yml
genq-nova/: .gitignore  CLAUDE.md  README.md
genq-nova/agent/: pyproject.toml
genq-nova/agent/data/: detections_bismayah_v2.geojson  detections_karrada.geojson  detections_karrada_inland.geojson  detections_karrada_recent.geojson  detections_karrada_v2.geojson  detections_live.geojson
genq-nova/agent/data/footprints/: bismayah.min.geojson
genq-nova/agent/data/models/: building_cnn.meta.json  building_cnn.pt
genq-nova/agent/data/samples/v2/: _manifest.txt
genq-nova/agent/data/signals/: signals_all.geojson  signals_data_chef.geojson  signals_namroud.geojson  signals_nova.geojson  signals_peter.geojson  signals_roberto.geojson
genq-nova/agent/nova/: __init__.py  api.py  change_detection.py  cnn.py  config.py  detection_store.py  detections.py  esri.py  events.py  explore.py  footprints.py  generate.py  highres.py  loop.py  run.py  sar.py  signals.py  verify.py  visualize.py  visualize_bands.py
genq-nova/agent/nova/agents/: __init__.py  _common.py  data_chef.py  namroud.py  peter.py  roberto.py
genq-nova/docs/: PROJECT_LOG.md  methodology.md  roadmap.md
genq-nova/scripts/: audit_detections.py  bake_v2_ids.py  clean_detections.py  hosted_cycle.py  rescan_karrada.py  retag_with_cnn.py  sample_v2_crops.py  setup_bismayah_layer.py  slim_footprints.py  test_loop.py  timed_scan.py  train_building_cnn.py
genq-nova/web/: package-lock.json  package.json  tailwind.config.ts
genq-nova/web/app/: globals.css  layout.tsx  page.tsx
(+12 files in other folders)
