[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nova"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Google Earth Engine
    "earthengine-api>=0.1.380",
    "geemap>=0.32.0",
    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    # API / server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    # Data / scheduling
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    # Misc
    "python-dotenv>=1.0.0",
]

[project.scripts]
nova-explore = "nova.explore:main"
nova-footprints = "nova.footprints:main"
nova-run = "nova.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]
